--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -81,5 +81,6 @@ body {
 
   &--stats {
     font-size: 1.5rem;
+    text-align: center;
   }
 }
